2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/inst_gb80.cc:
	  Add `ld (c), a`.
	  support/regression/ports/ucgbz80/support.c,
	  support/regression/ports/ucgbz80/uCsim.cmd:
	  Reduce size of __put.

2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/gb80.cc,
	  sim/ucsim/z80.src/inst_cb.cc,
	  sim/ucsim/z80.src/inst_gb80.cc:
	  Improve cycle counting.

2022-03-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/gb80.cc,
	  sim/ucsim/z80.src/z80mac.h:
	  Fix bug #3340 (`pop af` and `and`).

2022-03-06 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/ralloc.c,
	  src/mos6502/ralloc.h,
	  src/mos6502/ralloc2.cc:
	  Prepare for new spillt allocator.

2022-03-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Remove rlca when sub already sets carry.

2022-03-05 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCgen.c:
	  Improve labels in inline assembly and fix bug #2831.
	  Patch based on patch by Tom Li.
	* device/lib/_memmove.c,
	  device/lib/sm83/crt0.s,
	  device/lib/sm83/memcpy.s,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Add missing copyright notices.

2022-03-05 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve debug output.

2022-03-04 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/gen.h:
	  Change asmop.type to enum.
	* src/mos6502/gen.c:
	  Remove unused "result" parameter from aopOp().
	* src/mos6502/gen.c:
	  Allow AX in genCpl().
	* src/mos6502/gen.c:
	  Remove unused parameters in freeAsmop().
	* src/mos6502/main.c,
	  src/mos6502/main.h:
	  Removed unnecessary main.h

2022-03-03 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* device/lib/sm83/memcpy.s:
	  Replace redundancy with macros.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peeph.def:
	  Disable rule that pessimized some ports.

2022-03-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c: