@@ -1,3 +1,8 @@
+2022-03-07 Gabriele Gorla <gorlik@yahoo.com>
+
+	* src/mos6502/gen.c:
+	  Clear temp register literal values after a label.
+
 2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sim/ucsim/z80.src/inst_gb80.cc:
